# academic-grades-backend

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/core_api/: settings.py  urls.py
backend/courses/: models.py  tests.py  urls.py  views.py
backend/courses/migrations/: 0001_initial.py  0002_initial.py
backend/grades/: models.py  tests.py  urls.py  views.py
backend/grades/migrations/: 0001_initial.py  0002_initial.py
backend/users/: admin.py  models.py  tests.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
backend/utils/: decorators.py  error_handler.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/components/: Layout.tsx  Navbar.tsx  ProtectedRoute.test.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useAuth.ts  useRequireAuth.ts
frontend/src/pages/: AdminPanel.tsx  Courses.tsx  Dashboard.tsx  Grades.tsx  Login.tsx
frontend/src/routes/: AppRoutes.tsx
frontend/src/services/: api.test.ts  api.ts  auth.test.ts  auth.ts  courses.ts  grades.ts  users.ts
frontend/src/types/: index.ts
